# rules_snapshot_test

./: MODULE.bazel
.github/workflows/: test.yml
compare/: BUILD.bazel  binary.py  text.py
example/: MODULE.bazel
example/app/: BUILD.bazel  report.py
example/tests/: BUILD.bazel  snapshot_demo_test.py
example/tests/snapshots/demo/: data.json
example/tests/snapshots/snapshot_demo/: data.txt
example/tools/: BUILD.bazel  strip_timestamps.py
snapshot/: BUILD.bazel  normalizers.bzl  snapshot_test.bzl
snapshot/private/: BUILD.bazel  command_tool.bzl  jq_binary.bzl  runfiles.bzl  runner_main.py  test_rule.bzl  text_normalizer.py  update_main.py  update_rule.bzl  update_target.bzl
