module(
    name = "rules_snapshot_test",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "jq.bzl", version = "0.4.0")

toolchains = use_extension("@jq.bzl//jq:extensions.bzl", "toolchains")
use_repo(toolchains, "jq_toolchains")
register_toolchains("@jq_toolchains//:all")
