load("@rules_snapshot_test//snapshot:snapshot_test.bzl", "snapshot_format", "snapshot_test")

py_binary(
    name = "demo_test",
    srcs = ["snapshot_demo_test.py"],
    main = "snapshot_demo_test.py",
    deps = ["//app:app"],
)

snapshot_format(
    name = "text",
    normalize = ["//tools:strip_ts"],
    compare = "@rules_snapshot_test//compare:text",
)

snapshot_test(
    name = "demo",
    test = ":demo_test",
    outputs = {
        "data.txt": ":text",
    },
)

snapshot_test(
    name = "demo_alt",
    test = ":demo_test",
    outputs = {
        "data.txt": ":text",
    },
)
