load("@rules_snapshot_test//snapshot:snapshot_test.bzl", "snapshot_format", "snapshot_test", "update_all")
load("@rules_snapshot_test//snapshot:normalizers.bzl", "text_normalizer")

text_normalizer(
    name = "strip_ts_text",
    replace_text = {
        r"\s\d{4}.+$": " REDACTED",
    },
    line_ending = "unix",
)

py_binary(
    name = "demo_test",
    srcs = ["snapshot_demo_test.py"],
    main = "snapshot_demo_test.py",
    deps = ["//app:app"],
)

snapshot_format(
    name = "text",
    normalize = [":strip_ts_text"],
    compare = "@rules_snapshot_test//compare:text",
)

snapshot_test(
    name = "demo",
    test = ":demo_test",
    outputs = {
        "data.txt": ":text",
    },
)

snapshot_test(
    name = "demo_alt",
    test = ":demo_test",
    outputs = {
        "data.txt": ":text",
    },
)

update_all(
    name = "update_all",
)
