load("@rules_snapshot_test//snapshot:snapshot_test.bzl", "snapshot_format", "snapshot_test", "update_all")
load("@rules_snapshot_test//snapshot:normalizers.bzl", "text_normalizer", "json_normalizer")

text_normalizer(
    name = "strip_ts_text",
    replace_text = {
        r"\s\d{4}.+$": " REDACTED",
    },
    line_ending = "unix",
)

py_binary(
    name = "demo_test",
    srcs = ["snapshot_demo_test.py"],
    main = "snapshot_demo_test.py",
    deps = ["//app:app"],
)

snapshot_format(
    name = "text",
    normalize = [":strip_ts_text"],
    compare = "@rules_snapshot_test//compare:text",
)

json_normalizer(
    name = "json_norm",
    filter = ".timestamps |= map_values(\"REDACTED\")",
    args = ["--sort-keys"],
)

snapshot_format(
    name = "json",
    normalize = [":json_norm"],
    compare = "@rules_snapshot_test//compare:text",
)

snapshot_test(
    name = "demo",
    test = ":demo_test",
    outputs = {
        "data.txt": ":text",
        "data.json": ":json",
    },
)

snapshot_test(
    name = "demo_alt",
    test = ":demo_test",
    outputs = {
        "data.txt": ":text",
        "data.json": ":json",
    },
)

update_all(
    name = "update_all",
)
