py_binary(
    name = "runner",
    srcs = ["runner_main.py"],
    main = "runner_main.py",
    python_version = "PY3",
    deps = ["@rules_python//python/runfiles"],
    visibility = ["//snapshot:__pkg__"],
)

py_binary(
    name = "update",
    srcs = ["update_main.py"],
    main = "update_main.py",
    python_version = "PY3",
    visibility = ["//snapshot:__pkg__"],
)
