py_binary(
    name = "runner",
    srcs = ["runner_main.py"],
    main = "runner_main.py",
    python_version = "PY3",
    deps = ["@rules_python//python/runfiles"],
    visibility = ["//snapshot:__pkg__"],
)

py_binary(
    name = "update",
    srcs = ["update_main.py"],
    main = "update_main.py",
    python_version = "PY3",
    visibility = ["//snapshot:__pkg__"],
)

py_binary(
    name = "text_normalizer",
    srcs = ["text_normalizer.py"],
    main = "text_normalizer.py",
    python_version = "PY3",
    visibility = ["//visibility:public"],
)

load("//snapshot/private:jq_binary.bzl", "jq_binary")

jq_binary(
    name = "jq",
    visibility = ["//visibility:public"],
)
